# pagmo

./: .gitignore  .mailmap  .pylint  .travis.yml  AUTHORS  Astro__Functions_8cpp_source.html  Astro__Functions_8h_source.html  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.old  INSTALL  Lambert_8cpp_source.html  Lambert_8h_source.html  Pl__Eph__An_8cpp_source.html  Pl__Eph__An_8h_source.html  PowSwingByInv_8cpp_source.html  PowSwingByInv_8h_source.html  README  README.md  ZeroFinder_8h_source.html  ackley_8cpp_source.html  ackley_8h_source.html  adj__list__serialize__bug__fix_8hpp_source.html  ageing__clustered__ba_8cpp_source.html  ageing__clustered__ba_8h_source.html  algorithm_2base_8cpp_source.html  algorithm_2base_8h_source.html  algorithm_2cstrs__co__evolution_8cpp_source.html  algorithm_2cstrs__co__evolution_8h_source.html  algorithm_2cstrs__self__adaptive_8cpp_source.html  algorithm_2cstrs__self__adaptive_8h_source.html  algorithms_8h_source.html  annotated.html  antibodies__problem_8cpp_source.html  antibodies__problem_8h_source.html  archipelago_8cpp_source.html  archipelago_8h_source.html  barabasi__albert_8cpp_source.html  barabasi__albert_8h_source.html  (+1131 more)
PyGMO/: CMakeLists.txt  PyGMO.cpp  __init__.py  __init__.py.old  boost_python_container_conversions.h  boost_python_p_exceptions.h  exceptions.h  utils.h
PyGMO/algorithm/: CMakeLists.txt  __init__.py  _base.py  _cmaes.py  _cross_entropy.py  _example.py  _scipy_algos.py  algorithm.cpp  base.py  cross_entropy.py  example.py  python_base.h
PyGMO/astro_toolbox/: CMakeLists.txt  __init__.py  algorithm.cpp  astro_toolbox.cpp
PyGMO/core/: CMakeLists.txt  __init__.py  core.cpp  core.cpp.orig  python_base_island.h  python_island.h
PyGMO/examples/: benchmark_racing.py  racing.py  simple_racing.py  using_the_analysis_module.py
PyGMO/kep_toolbox/: CMakeLists.txt  __init__.py  kep_toolbox.cpp
PyGMO/migration/: CMakeLists.txt  __init__.py  migration.cpp
PyGMO/problem/: CMakeLists.txt  __init__.py  _base.py  _base_class.py  _base_stochastic.py  _example.py  _example_stochastic.py  _gtop.py  _mit_spheres.py  _mo.py  _pl2pl.py  _spheres.py  _spheres_q.py  _tsp.py  _tsp_vrplc.py  dtlz2.py  problem.cpp  problem.cpp.orig  problem_meta.cpp  problem_space.cpp  python_base.h  python_base_stochastic.h
PyGMO/test/: CMakeLists.txt  __init__.py  _archipelago_tests.py  _hypervolume_tests.py  _property_tests.py  _topology_tests.py
PyGMO/topology/: __init__.py  topology.cpp
PyGMO/util/: CMakeLists.txt  __init__.py  _analysis.py  _tsp.py  burma14.xml  example.py  hypervolume.cpp  my_module.py  pcatest.py  start.py  t.py  test.py  tsp.py  tsplib.py  util.cpp
PyGMO3/algorithm/: CMakeLists.txt  __init__.py
examples/: CMakeLists.txt  constraints_handling.cpp  cstrs_co_evolution.cpp  cstrs_core.cpp  cstrs_death_penalty.cpp  cstrs_immune_system.cpp  cstrs_self_adaptive.cpp  cstrs_self_adaptive_island.cpp  demo_serialization.cpp  evolve_spheres.cpp  evolve_spheres_racing.cpp  example_polymorphic_serialization.cpp  gtoc_2_turin.cpp  hm_2_asteroids.cpp  migrate_or_not.cpp  mpi_example.cpp  parallel_vs_sequential.cpp  simple_racing.py  test_bee.cpp
src/: CMakeLists.txt  CMakeLists.txt.orig  adj_list_serialize_bug_fix.hpp  algorithms.h  archipelago.cpp  archipelago.h  base_island.cpp  base_island.h  config.h  constants.h  exceptions.h  gsl.cpp  gsl.h  gsl_init.cpp  gsl_init.h  island.cpp  island.h  migration.h  mpi_environment.cpp  mpi_environment.h  mpi_island.cpp  mpi_island.h  p_exceptions.h  pagmo.h  population.cpp  population.h  problems.h  problems.h.orig  py_lock.cpp  py_lock.h  py_sig_handler.cpp  py_sig_handler.h  python_locks.cpp  python_locks.h  rng.cpp  rng.h  scaling_dtlz2_eval.py  serialization.h  topologies.h  types.h
src/AstroToolbox/: Astro_Functions.cpp  Astro_Functions.h  Lambert.cpp  Lambert.h  Pl_Eph_An.cpp  Pl_Eph_An.h  PowSwingByInv.cpp  PowSwingByInv.h  ZeroFinder.h  mga.cpp  mga.h  mga_dsm.cpp  mga_dsm.h  misc4Tandem.cpp  misc4Tandem.h  propagateKEP.cpp  propagateKEP.h  taylor_fixedthrust.cpp  time2distance.cpp  time2distance.h
src/SolversThreads/: SolversThreads.cpp  SolversThreads.h
src/algorithm/: aco.cpp  aco.h  aco_elite.cpp  aco_elite.h  aco_rank.cpp  aco_rank.h  base.cpp  base.h  base_gsl.cpp  base_gsl.h  base_nlopt.cpp  base_nlopt.h  bee_colony.cpp  bee_colony.h  cmaes.cpp  cmaes.h  cross_entropy.cpp  cross_entropy.h  cs.cpp  cs.h  cstrs_co_evolution.cpp  cstrs_co_evolution.h  cstrs_core.cpp  cstrs_core.h  cstrs_immune_system.cpp  cstrs_immune_system.h  cstrs_self_adaptive.cpp  cstrs_self_adaptive.h  de.cpp  de.h  de_1220.cpp  de_1220.h  de_self_adaptive.cpp  de_self_adaptive.h  ea.cpp  ea.h  firefly.cpp  firefly.h  gsl_bfgs.cpp  gsl_bfgs.h  (+90 more)
src/ann_toolbox/: ctrnn.cpp  ctrnn.h  multilayer_perceptron.cpp  neural_network.cpp  neural_network.h
src/atomic_counters/: atomic_counter_gcc_41.h  atomic_counter_generic.h  atomic_counter_msvc_long.h  atomic_counters.h  base_atomic_counter.h
src/boost_mpi/: packed_iarchive.cpp  packed_oarchive.cpp  packed_skeleton_iarchive.cpp  packed_skeleton_oarchive.cpp  point_to_point.cpp  text_skeleton_oarchive.cpp
src/boost_serialization/: archive_exception.cpp  basic_archive.cpp  basic_iarchive.cpp  basic_oarchive.cpp  basic_serializer_map.cpp  basic_xml_grammar.ipp  codecvt_null.cpp  extended_type_info.cpp  extended_type_info_typeid.cpp  shared_ptr_helper.cpp  utf8_codecvt_facet.cpp  void_cast.cpp  xml_archive_exception.cpp
src/keplerian_toolbox/: CMakeLists.txt  asteroid_gtoc2.cpp  asteroid_gtoc2.h  codings.h  (+34 more)
src_old/: CMakeLists.txt  config.h  constants.h  p_exceptions.h
tests/: CMakeLists.txt  best_solutions_test.cpp  hypervolume_test.cpp  local_torture_test.cpp  mpi_torture_test.cpp  serialization_algorithms.cpp  serialization_hypervolume.cpp  serialization_problems.cpp  test.h  test_001.cpp  test_aco.cpp  test_archipelago.cpp  test_decompose.cpp  test_functions.h  test_mpi.cpp  test_noisy.cpp  test_properties.cpp  test_racing.cpp  test_racing_algorithm.cpp  test_robust.cpp  test_rotated.cpp  test_serialization.cpp  test_shifted.cpp  test_tsp.cpp
(+1205 files in other folders)
